c4prj2_input/grade.txt
Grading at Mon Sep 10 23:10:56 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:60:14: error: implicit declaration of function ‘isalnum’ [-Werror=implicit-function-declaration]
     else if (isalnum(*(str+i))) {
              ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
